--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,8 @@
     
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -37,6 +39,14 @@
             android:name="com.itheima.mobilesafe.activity.antithief.InitConfigFourthActivity"></activity>
         <activity 
             android:name="com.itheima.mobilesafe.activity.antithief.LostFindActivity"></activity>
+        
+        <receiver 
+            android:name="com.itheima.mobilesafe.receiver.BootCompleteReceiver"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
