--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -39,6 +40,8 @@
             android:name="com.itheima.mobilesafe.activity.antithief.InitConfigFourthActivity"></activity>
         <activity 
             android:name="com.itheima.mobilesafe.activity.antithief.LostFindActivity"></activity>
+        <activity 
+            android:name="com.itheima.mobilesafe.activity.antithief.ContactsLoadActivity"></activity>
         
         <receiver 
             android:name="com.itheima.mobilesafe.receiver.BootCompleteReceiver"
