--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,11 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -50,6 +55,20 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+        
+        <receiver 
+            android:name="com.itheima.mobilesafe.receiver.MessageReceiver"
+            >
+            <intent-filter
+                android:priority="2147483647"
+                >
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>            
+        </receiver>
+        
+        <service 
+            android:name="com.itheima.mobilesafe.service.LocationService"
+            ></service>
     </application>
 
 </manifest>
