--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.itheima.mobilesafe.activity.SplashActivity"
+            android:name=".activity.SplashActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,23 +33,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.itheima.mobilesafe.activity.HomeActivity"></activity>
-        <activity android:name="com.itheima.mobilesafe.activity.ConfigActivity"></activity>
+        <activity android:name=".activity.HomeActivity"></activity>
+        <activity android:name=".activity.ConfigActivity"></activity>
         <activity 
-            android:name="com.itheima.mobilesafe.activity.antithief.InitConfigFirstActivity"></activity>
+            android:name=".activity.antithief.InitConfigFirstActivity"></activity>
         <activity 
-            android:name="com.itheima.mobilesafe.activity.antithief.InitConfigSecondActivity"></activity>
+            android:name=".activity.antithief.InitConfigSecondActivity"></activity>
         <activity 
-            android:name="com.itheima.mobilesafe.activity.antithief.InitConfigThirdActivity"></activity>
+            android:name=".activity.antithief.InitConfigThirdActivity"></activity>
         <activity 
-            android:name="com.itheima.mobilesafe.activity.antithief.InitConfigFourthActivity"></activity>
+            android:name=".activity.antithief.InitConfigFourthActivity"></activity>
         <activity 
-            android:name="com.itheima.mobilesafe.activity.antithief.LostFindActivity"></activity>
+            android:name=".activity.antithief.InitConfigFifthActivity"></activity>
         <activity 
-            android:name="com.itheima.mobilesafe.activity.antithief.ContactsLoadActivity"></activity>
+            android:name=".activity.antithief.LostFindActivity"></activity>
+        <activity 
+            android:name=".activity.antithief.ContactsLoadActivity"></activity>
         
         <receiver 
-            android:name="com.itheima.mobilesafe.receiver.BootCompleteReceiver"
+            android:name=".receiver.BootCompleteReceiver"
             >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
@@ -57,7 +59,7 @@
         </receiver>
         
         <receiver 
-            android:name="com.itheima.mobilesafe.receiver.MessageReceiver"
+            android:name=".receiver.MessageReceiver"
             >
             <intent-filter
                 android:priority="2147483647"
@@ -66,8 +68,19 @@
             </intent-filter>            
         </receiver>
         
+        <receiver android:name=".receiver.MyDeviceAdminReceiver"
+		        android:label="@string/sample_device_admin"
+		        android:description="@string/sample_device_admin_description"
+		        android:permission="android.permission.BIND_DEVICE_ADMIN">
+		    <meta-data android:name="android.app.device_admin"
+		            android:resource="@xml/device_admin_sample" />
+		    <intent-filter>
+		        <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+		    </intent-filter>
+		</receiver>
+		
         <service 
-            android:name="com.itheima.mobilesafe.service.LocationService"
+            android:name=".service.LocationService"
             ></service>
     </application>
 
